<resources>
    <string name="app_name">BarberShop+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_expense">Gastos</string>
    <string name="menu_expense_category">Categoría de gastos</string>
    <string name="menu_turn">Turno</string>
    <string name="menu_type_service">Tipo de servicio</string>
    <string name="menu_service">Servicio</string>
    <string name="menu_reservation">Reservación</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="menu_accept">Aceptar</string>
    <string name="menu_select_all">Seleccionar todos</string>
    <string name="menu_select">Seleccionar</string>
    <string name="menu_capture">Capturar</string>

    <string name="message_success_add">Adicionado satisfactoriamente</string>
    <string name="message_success_edit">Editado satisfactoriamente</string>
    <string name="message_success_delete">Elimiando satisfactoriamente</string>
    <string name="message_no_data_avaliable">No hay datos disponibles</string>
    <string name="message_cant_be_undone">Esta acción no se puede deshacer</string>
    <string name="message_confirm_delete_selected_expense_category">¿Seguro que desea eliminar las categorías de gastos seleccionados?</string>
    <string name="message_delete_expense_categories">Eliminar categorías de gastos</string>

    <string name="message_confirm_delete_selected_expense">¿Seguro que desea eliminar los gastos seleccionados?</string>
    <string name="message_delete_expenses">Eliminar gastos</string>

    <string name="message_confirm_delete_selected_turn">¿Seguro que desea eliminar los turnos seleccionados?</string>
    <string name="message_delete_turns">Eliminar turnos</string>

    <string name="message_confirm_delete_selected_client">¿Seguro que desea eliminar los clientes seleccionados?</string>
    <string name="message_delete_clients">Eliminar clientes</string>

    <string name="message_confirm_delete_selected_service">¿Seguro que desea eliminar los servicios seleccionados?</string>
    <string name="message_delete_services">Eliminar servicios</string>

    <string name="message_confirm_delete_selected_reservation">¿Seguro que desea eliminar las reservaciones seleccionadas?</string>
    <string name="message_delete_reservations">Eliminar reservación</string>

    <!--    Hint-->
    <string name="message_hint_name">Nombre</string>
    <string name="message_hint_description">Descripción</string>
    <string name="message_hint_search">Buscar</string>
    <string name="message_hint_color">Color</string>
    <string name="message_hint_date">Fecha</string>
    <string name="message_hint_amount">Cantidad</string>
    <string name="message_hint_hour">Hora</string>
    <string name="message_hint_phone_number">Télefono</string>
    <string name="message_hint_cell">Celular</string>
    <string name="message_hint_price">Precio</string>
    <string name="message_hint_client">Cliente</string>
    <string name="message_hint_turn">Turno</string>
    <string name="message_hint_cost">Costo</string>
    <string name="message_hint_total_cost">Costo total</string>
    <string name="message_hint_status">Estado</string>
    <string name="message_hint_services">Servicios</string>

    <!--    Validaciones-->
    <string name="message_validation_entry_field">El campo no puede estar vacío</string>
    <string name="message_validation_only_spaces">El campo contiene solo espacios</string>
    <string name="message_validation_exits_expense_category">Ya existe una categoría de gasto con ese nombre</string>
    <string name="message_validation_exits_turn_name">Ya existe un turno con ese nombre</string>
    <string name="message_validation_exits_turn_hour">Ya existe un turno con esa hora</string>
    <string name="message_validation_incorrect_start_cell">El número debe empezar con 5</string>
    <string name="message_validation_lenght_phone">El número debe contener 8 digitos</string>
    <string name="message_validation_select_expense_category">No se ha seleccionado una categoría de gastos</string>
    <string name="message_validation_select_color_expense_category">No se ha seleccionado un color</string>
    <string name="message_validation_select_turn">No se ha seleccionado un turno</string>
    <string name="message_validation_select_client">No se ha seleccionado un cliente</string>
    <string name="message_validation_select_service">No se ha seleccionado un servicio</string>


    <string name="title_list_color_select">Seleccionar color</string>
    <string name="title_list_expense_category_select">Seleccionar categoría de gastos</string>
    <string name="title_selected">Selecciondos:</string>
    <string name="title_list_client_select">Seleccionar cliente</string>
    <string name="title_list_turn_select">Seleccionar turno</string>

    <string name="grey">Gris</string>
    <string name="teal">Verde oscuro</string>
    <string name="green">Verde</string>
    <string name="yellow">Amarillo</string>
    <string name="orange">Naranja</string>
    <string name="red">Rojo</string>
    <string name="pink">Rosado</string>
    <string name="purple">Morado</string>
    <string name="deep_purple">Morado oscuro</string>
    <string name="indigo">Azul oscuro</string>
    <string name="blue">Azul</string>

    <string name="you_must_grant_camera_and_external_storage_permission">Debes conceder el permiso de usar la cámara y el almacenamiento externo</string>
    <string name="you_must_grant_read_external_storage_permission">Debes conceder el permiso de leer el almacenamiento externo</string>
    <string name="you_must_grant_write_external_storage_permission">Debes conceder el permiso de escribir en el almacenamiento externo</string>
    <string name="you_must_grant_call_permission">Debes conceder el permiso de llamadas</string>
    <string name="crop_image">Recortar imágen</string>

    <!--    Reservacion-->
    <string name="active">Activa</string>
    <string name="inactive">Inactiva</string>

    <!--Servicio-->
    <string name="service_status_open">Abierta</string>
    <string name="service_status_cancel">Cancelada</string>
    <string name="service_status_completed">Completada</string>
    <string name="service_status_closed">Cerrada</string>

</resources>