<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_client" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_content_cut"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_turn"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_turn" />
    </group>
</menu>