<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.ssplus.barbershop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_client"
        android:name="it.ssplus.barbershop.ui.client.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client">
        <action
            android:id="@+id/action_nav_client_to_manage_client"
            app:destination="@id/manage_client"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/manage_client"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/manage_client"
        android:name="it.ssplus.barbershop.ui.client.ManageClientFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_manage_client">
        <action
            android:id="@+id/action_manage_client_to_nav_client"
            app:destination="@id/nav_client"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_client"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_service"
        android:name="it.ssplus.barbershop.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_expense"
        android:name="it.ssplus.barbershop.ui.expense.ExpenseFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_expense">
        <action
            android:id="@+id/action_nav_expense_to_expense_category"
            app:destination="@id/expense_category"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/expense_category"
        android:name="it.ssplus.barbershop.ui.expense_category.ExpenseCategoryFragment"
        android:label="@string/menu_expense_category"
        tools:layout="@layout/fragment_expense_category">
        <action
            android:id="@+id/action_expense_category_to_nav_expense"
            app:destination="@id/nav_expense"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_expense"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_turn"
        android:name="it.ssplus.barbershop.ui.turn.TurnFragment"
        android:label="@string/menu_turn"
        tools:layout="@layout/fragment_turn" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="it.ssplus.barbershop.ui.reservation.ReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_reservation">
        <action
            android:id="@+id/action_nav_reservation_to_manage_reservation"
            app:destination="@id/manage_reservation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/manage_reservation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/manage_reservation"
        android:name="it.ssplus.barbershop.ui.reservation.ManageReservationFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_manage_reservation">
        <action
            android:id="@+id/action_manage_reservation_to_nav_reservation"
            app:destination="@id/nav_reservation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_reservation"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>