<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameService"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:endIconTint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etNameService"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCostService"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        app:endIconDrawable="@drawable/ic_attach_money"
        app:endIconMode="custom"
        app:endIconTint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNameService">

        <EditText
            android:id="@+id/etCostService"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint_price"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescriptionService"
        style="@style/CustomMultilineTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionDone"
        app:endIconTint="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCostService">

        <EditText
            android:id="@+id/etDescriptionService"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="4"
             />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>