<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manageClientFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.ManageClientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPhotoClient"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/round_shape_accent"
                android:src="@drawable/ic_account_circle_64"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabClientTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:src="@drawable/ic_photo_camera"
                app:fabSize="normal"
                app:layout_anchor="@id/ivPhotoClient"
                app:layout_anchorGravity="center_vertical|end"
                app:layout_constraintBottom_toBottomOf="@+id/ivPhotoClient"
                app:layout_constraintStart_toStartOf="@+id/ivPhotoClient"
                app:layout_constraintTop_toTopOf="@+id/ivPhotoClient" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameClient"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/etNameClient"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint_name"
                android:inputType="textPersonName|textCapWords"
                android:lines="1"
                tools:text="Nombre"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumberClient"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/etPhoneNumberClient"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint_phone_number"
                android:inputType="phone"
                android:lines="1"
                tools:text="47426598"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCellClient"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:prefixText="+53"
            app:counterMaxLength="11"
            app:prefixTextColor="@color/primaryTextColor">

            <EditText
                android:id="@+id/etCellClient"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint_cell"
                android:inputType="phone"
                android:lines="1"
                tools:text="56223459" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescriptionClient"
            style="@style/CustomMultilineTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconTint="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAmountExpense">

            <EditText
                android:id="@+id/etDescriptionClient"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint_description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="2" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>