<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerSelectIconAndNameExpenseCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameExpenseCategory"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etNameExpenseCategory"
                style="@style/CustomEditTextIconRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_hint_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <it.ssplus.iconpickert.IconPickert
            android:id="@+id/iconPickert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tilNameExpenseCategory"
            app:layout_constraintEnd_toEndOf="@+id/tilNameExpenseCategory"
            app:layout_constraintTop_toTopOf="@+id/tilNameExpenseCategory"
            app:transparent="true">

        </it.ssplus.iconpickert.IconPickert>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerSelectColorExpneseCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSelectIconAndNameExpenseCategory">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilColorExpenseCategory"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="@android:color/transparent"
            app:startIconTintMode="src_over">

            <EditText
                android:id="@+id/etColorExpenseCategory"
                style="@style/CustomEditTextIconRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/message_hint_color"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivSelectColorExpenseCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:cropToPadding="true"
            android:src="@drawable/ic_color_lens_24"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tilColorExpenseCategory"
            app:layout_constraintEnd_toEndOf="@+id/tilColorExpenseCategory"
            app:layout_constraintTop_toTopOf="@+id/tilColorExpenseCategory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescriptionExpenseCategory"
        style="@style/CustomMultilineTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:endIconTint="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSelectColorExpneseCategory">

        <EditText
            android:id="@+id/etDescriptionExpenseCategory"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>